Added HTML, CSS, and jQuery
Co-authored-by: Julien Leonardo <julien.m.leonardo@gmail.com>
Co-authored-by: Branden Clauson <clauson.branden@gmail.com>
Co-authored-by: Zoe Sullivan <zoetsullivan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   <title>DOM Manipulation</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Talk to the web page</h1>
+    <p>Click a button to say something to the web page. See what it says back!</p>
+    <button class="btn btn-success" id="green">Green</button>
+    <button class="btn btn-warning" id="yellow">Yellow</button>
+    <button class="btn btn-danger" id="red">Red</button>
+  </div>   
+
+
+
+
+
+
+
 </body>
+</html>
